--- a/c1/01.1.md
+++ b/c1/01.1.md
@@ -1,7 +1,28 @@
-# 1.1 NxCells是信息系统工具
+# 1.1 聚表与ES的区别
+聚表是一个面向最终用户的信息系统设计工具与运行平台，它的作用是帮助我们“建立适合需要的管理信息系统，实现管理的信息化“。
 
-* NxCells是一个面向最终用户的信息系统设计工具与运行平台，它的作用是帮助我们“建立适合需要的管理信息系统，实现管理的信息化“。
+#### 1.1.1 传统ES五大核心
 
-* 谈到管理信息系统，人们很容易联想起国内外的一些ERP软件、财务软件、进销存软件、OA软件、CRM软件等等。NxCells是哪一类软件呢？都不是，它不是ERP软件，但是我们可以用它来构造出一个ERP系统，它不是财务软件，但是我们可以用它来实现一个财务系统，它不是OA，但是它很容易变身为一个OA系统，……，简单地说，它是一个工具和平台，我们可以利用它，根据企业自身的业务状况和管理需求，把信息系统搭建出来。
+- 模板
 
-* 如此说来，难道NxCells是编程语言吗？当然也不是，NxCells不是专供计算机技术人员使用的工具，它是面向广大的企事业单位的业务人员和管理人员的，它不要求使用者掌握过多的计算机专业知识，只要会Excel，就可以学会NxCells的使用；只要懂业务需求，就可以用NxCells搭建符合自己需要的信息系统。
+- 权限
+
+- 工作流
+
+- 数据规范
+
+- 表间公式
+
+#### 1.1.2 聚表新功能
+
+- 表间公式支持写sql
+
+- `控制规则`：跨表控制模板的删除权限等。
+
+- `报表命令`：取代VBA，拓展了AI，海康摄像头等功能，万花筒神器。
+
+- `触发器`：高级sql功能
+
+- `存储过程`：高级sql功能
+
+> ES中的`超链接`在聚表中叫`表间关联`
