--- a/c2/02.3.md
+++ b/c2/02.3.md
@@ -1,15 +1,8 @@
-# 2.3 客户端安装
+# 2.3 客户端&移动服务端
 
-1)	在解压后的安装程序文件夹中，右键以管理员身份运行NxCells-setup.exe，出“NxCells安装程序”对话框，按【下一步】
- 
-![](../img/2.3-1.jpg)
+### 客户端安装
+一般双击client程序，一路按【下一步】即可
 
-2)	出现“许可协议”对话框，选择同意许可协议，按【下一步】
- 
-![](../img/2.3-2.jpg)
+### 移动服务端安装
 
-3)	选择安装类型“仅安装客户端”，按[下一步]
- 
-![](../img/2.3-3.jpg)
-
-4)	下面安装步骤都按省缺值，除选择安装路径外都按下一步，最后完成安装。
+一般双击bs程序，一路按【下一步】即可，注意默认端口是`88`，可用在`IIS`中修改。
