--- a/c2/02.4.md
+++ b/c2/02.4.md
@@ -1,25 +1,23 @@
-# 2.4 手机服务端的安装
-如上节手机端的Web服务和应用服部署在同一台机器上，目前仅支持手动部署方式；其它部署方式另作讲解。
+# 2.4 聚表的组成模块
 
-1)	首先官网地址www.nxcells.com下载NxCells-mobile.exe文件
+#### 服务器配置
 
-2)	在解压后的安装程序文件夹中，右键以管理员身份运行NxCells-mobile.exe，出“NxCells Web版安装程序”对话框，按【下一步】
+在服务端计算机上会有“服务器配置”模块，供系统管理员执行全局系统管理工作，包括：配置系统参数、建立应用系统、备份/恢复数据库、服务程序的重启、配置邮件服务器等。
+
+#### 设计端
+
+用户通过设计端登录到一个应用系统，是最常用的操作模块，包括：应用系统内的系统管理，如设置部门、角色、用户等；应用系统的设计，包括定义模板、定义工作流、自定义查询、导航图、视图、外部数据源、数据类型、数据规范等；在应用系统中的数据填报、流程任务办理、查询统计等操作；用户个人选项的设置等。
+
+#### 客户端
+
+用户通过客户端登录到一个应用系统，是最常用的操作模块，包括：在应用系统中的数据填报、流程任务办理、查询统计等操作；用户个人选项的设置等。
+
+#### 移动端
+
+移动端为用户提供了APP的操作界面，用户可通过设置访问服务器的IP地址，即可以登录到系统进行操作。
  
-![](../img/2.4-1.jpg)
+?> APP支持IOS/安卓，也支持直接从浏览器访问，默认端口88，例如http://localhost:88
 
-3)	选择要安装的路径，默认“C:\Program Files (x86)\NxCells\web\”，按【下一步】
- 
-![](../img/2.4-2.jpg)
+#### Web端
 
-4)	输入服务器地址与端口号，按【下一步】
-
-![](../img/2.4-3.jpg)
-
-5)	点【安装】
- 
-![](../img/2.4-4.jpg)
-![](../img/2.4-5.jpg)
- 
-6)	安装完成，点【完成】
-
-![](../img/2.4-6.jpg)
+?> 即将到来
