--- a/c2/02.5.md
+++ b/c2/02.5.md
@@ -1,21 +1,15 @@
-# 2.5 NxCells的组成模块
-NxCells包括以下模块，如图 
-  
-![](../img/2.5-1.jpg)
+# 2.6 升级&卸载
 
-## 服务器配置
+### 升级
+直接覆盖安装的方式升级
 
-在服务端计算机上会有“NxCells服务器配置”模块，供系统管理员执行全局系统管理工作，包括：配置系统参数、建立应用系统、备份/恢复数据库、服务程序的重启、配置邮件服务器等。
-
-## 设计端
-
-用户通过设计端登录到一个应用系统，是最常用的操作模块，包括：应用系统内的系统管理，如设置部门、角色、用户等；应用系统的设计，包括定义模板、定义工作流、自定义查询、导航图、视图、外部数据源、数据类型、数据规范等；在应用系统中的数据填报、流程任务办理、查询统计等操作；用户个人选项的设置等。
-
-## 客户端
-
-用户通过客户端登录到一个应用系统，是最常用的操作模块，包括：在应用系统中的数据填报、流程任务办理、查询统计等操作；用户个人选项的设置等。
-
-## 移动端
-
-移动端为用户提供了APP的操作界面，用户可通过设置访问服务器的IP地址，即可以登录到系统进行操作。
+当有新版本的安装程序可用时，先把安装程序复制到服务器所在的机器上，直接双击运行安装程序。服务器升级完成后，客户端若登录，会收到系统提示的是否升级信息。
  
+回答【是】，则客户端开始自动从服务器下载最新的文件，完成升级。
+
+### 卸载
+点击卸载即可
+
+!> 卸载程序不提供卸载数据库功能，如要删除数据库，需在数据库中操作。
+
+
