--- a/c2/02.7.md
+++ b/c2/02.7.md
@@ -1,6 +1,4 @@
-# 2.7 升级
-直接覆盖安装的方式升级
+# 2.7 延长试用期
+聚表初次安装有30天的试用期，带20个并发用户。
 
-当有新版本的安装程序可用时，先把安装程序复制到服务器所在的机器上，直接双击运行安装程序。服务器升级完成后，客户端若登录，会收到系统提示的是否升级信息。
- 
-回答【是】，则客户端开始自动从服务器下载最新的文件，完成升级。
+> 目前每2个月会发布一次试用延期工具。
