--- a/c2/02.2.md
+++ b/c2/02.2.md
@@ -1,34 +1,10 @@
 # 2.2 服务端安装
-本节所述服务端安装为最简单的部署方式，即服务器只有一台机器，应用服务、数据库、Web服务等都安装在同一台机器上；其它部署方式下的服务端安装另作讲解。
-
-1)	在解压后的安装程序文件夹中，右键以管理员身份运行NxCells-setup.exe，出“NxCells安装程序”对话框，按【下一步】
+一般双击安装程序，一路【下一步】即可。
  
-![](../img/2.2-1.jpg)
+!> 两点需注意：
 
-2)	出现“许可协议”对话框，选择同意许可协议，按【下一步】
- 
-![](../img/2.2-2.jpg)
+1. 新手选择数据库时要使用SQL Server2005及以上版本，不要使用精简版sql
 
-3)	选择安装类型“安装服务器端”，按[下一步]
- 
-![](../img/2.2-3.jpg)
+2. 安装完成后，与ES不同的是需要手工还原server目录下的blank.bak备份。
 
-4)	选择快捷方式文件夹，按【下一步】
- 
-![](../img/2.2-4.jpg)
-
-5)	选择要安装的路径，默认“D:\NxCells”，按【下一步】
- 
-![](../img/2.2-5.jpg)
-
-6)	安装程序会自动获取本地服务器IP地址或主机名，请填入正确的用户名及密码，按【下一步】，会提示“正在连接数据库，请稍后…”，如果提示找不到数据库，请退出安装程序，然后先安装SQL Server2005及以上版本
-
-![](../img/2.2-6.jpg) 
-
-7)	选择数据库的安装类型“安装全新数据库”，按【下一步】
-
-8)	按【安装】，出现安装进度
-
-9)	安装完成，点【完成】。
-
-![](../img/2.2-7.jpg)
+![](../img/2.1-1.jpg)
