--- a/c4/04.1.md
+++ b/c4/04.1.md
@@ -1,4 +1,8 @@
-# 4.1 登录到NxCells设计器
-通过“开始-程序-NxCells-NxCells设计器”或者桌面的快捷方式，都可以登录到设计器中。如下图：
+# 4.1 工作流
+* 聚表的工作流在设计器中单独设置，而ES是与模板一体的。
   
-![](../img/4.1-1.jpg)
+* 可以设置`录入提交意见`，或`录入回退意见`
+
+* 可以设置`允许一健办理`，设置后在办理任务时，选择任务右健再点击“一健办理”，会自动办理任务。可通过设置字段默认值自动完成任务中相关内容的填写。
+
+!> 撤回流程需要到已办中进行。
