--- a/c5/05.2.md
+++ b/c5/05.2.md
@@ -1,19 +1,5 @@
-# 5.2 Excel玩转二维码
-- 示例图:
+# 5.2 存储过程
 
-![](../images/5.2.jpg)
+* 存储过程需要在sql里写
 
-- 不使用QR控件，直接在Excel上“画”出二维码，没错，就是这么任性
-  
- * MatrixCode-无二维码控件版-回车：<a href="../src/5.2.1.xls" download>模板下载</a>
-
- * MatrixCode-无二维码控件版：<a href="../src/5.2.2.xls" download>模板下载</a>
-
- * 二维码原型表QRCode_Prototype_v5：<a href="../src/5.2.3.xlsm" download>模板下载</a>
-
- * 勤哲es使用二维码(VBA版)：<a href="../files/5.2.4.zip" download>模板下载</a>
-
-
-### 本节贡献者
-*@meteor*  
-*@张PM*
+* 存储过程的触发有两种，一种类似表间公式，在模板中设置，一种是通过报表命令调用。
