--- a/c6/06.2.md
+++ b/c6/06.2.md
@@ -1,9 +1,6 @@
-# 6.2 全国省市区镇数据Excel
-- 效果图:
+# 6.2 微信集成
 
-![](../images/6.2.1.jpg)
-
-<a href="../src/6.2.2.xls" download> Excel下载</a>
-
-### 本节贡献者
-*@柳亚子*
+* 回调url：http://域名/wx.ashx
+* 自定义菜单：服务器server目录下\webchat\menu的json文件
+* 需要认证的服务号，可语音打开某个模板
+* 匿名填报
