--- a/c6/06.1.md
+++ b/c6/06.1.md
@@ -1,23 +1,10 @@
-# 6.1 模板配色、功能欣赏
+# 6.1 APP发布
 
-> @淡淡风-员工表
-  
-![](../images/6.1.1.jpg)
+发布APP的前奏：
 
-> @研特-通用审核升级为批量审核
-  
-![](../images/6.1.2.png)
-
-> @訫訫-ES导航
-  
-![](../images/6.1.3.jpg)
-
-> @张PM-灰蓝配色
-  
-![](../images/6.1.4.jpg)
-  
-<a href="../src/6.1.5.xls" download> 表格下载</a>
-	
-> @村长-发票过账UI
-
-![](../images/6.1.5.gif)
+* 模板属性设置`模板标题`，`手机分类`。
+* 服务器端Web目录`img\mobile\`添加此应用图标并命名为`【模板标题】+.png`
+* 管理数据表中勾选`手机填报`和`手机摘要`
+* 设置好模板权限
+* 提数公式要勾选`该公式应用于手机`
+* 每次修改模板后都要重新`发布手机端`
