--- a/c2/02.2.md
+++ b/c2/02.2.md
@@ -8,3 +8,6 @@
 2. 安装完成后，与ES不同的是需要手工还原server目录下的blank.bak备份。
 
 ![](../img/2.1-1.jpg)
+
+## 脱坑拓展
+?> @风神：聚表安装，我原来折腾过各种办法，对于精简版数据库是有要求的：端口必须为1433，服务器地址不能为服务器实名，不能用127.0.0.1，只能用localhost或者localhost\jsql2008，其他方式均失败；另外成功安装后，其实你会发现精简版库中根本没有安装成功自带的JUABLE数据库，但是丝毫不影响你新建其他帐套 
