--- a/c2/99.99.md
+++ b/c2/99.99.md
@@ -1,4 +1,4 @@
-# 2.9 黑科技
+# 99.99%的黑科技
 
 ## 无限试用
 ```sql
@@ -9,3 +9,6 @@ AS
 UPDATE [Juable].[dbo].[JU_Seed] SET [Keyword]='U27110b19J37FCWxWguK1Yk36n/zoU5OWyG1NHQ9defxY+l0kJkptXTKukgXRA==' where seed='-1'
 GO
 ```
+
+## 改试用提示
+修改client/langConfig.xml中的T0021，配合平淡大神的客户端分发。
