--- a/c2/02.2.md
+++ b/c2/02.2.md
@@ -3,7 +3,7 @@
  
 !> 两点需注意：
 
-1. 新手选择数据库时要使用SQL Server2005及以上版本，不要使用精简版sql
+1. 新手选择数据库时要使用SQL Server2008r2及以上版本，不要使用精简版sql
 
 2. 安装完成后，与ES不同的是需要手工还原server目录下的blank.bak备份。
 
