--- a/c3/03.6.md
+++ b/c3/03.6.md
@@ -3,6 +3,10 @@
 
 * 提数公式支持手工写`sql`，这是一个非常强大的功能
 
+!> 如果手写sql，要先设置字段填充，可以往需要填充的字段都填入`1`！
+
+![](../img/3.6.1.png)
+
 * 提数公式用于APP时，应用方式需要勾选`该公式应用于手机`
 
 * 回写公式不带`事务`，有失败风险，尽量避免使用
