--- a/c3/03.6.md
+++ b/c3/03.6.md
@@ -3,7 +3,9 @@
 
 * 提数公式支持手工写`sql`，这是一个非常强大的功能
 
-!> 如果手写sql，要先设置字段填充，可以往需要填充的字段都填入`1`！
+!> @新新：如果手写sql，要先设置字段填充，可以往需要填充的字段都填入`1`！
+
+> @Mr.He
 
 ![](../img/3.6.1.png)
 
