--- a/c6/06.1.md
+++ b/c6/06.1.md
@@ -8,3 +8,9 @@
 * 设置好模板权限
 * 提数公式要勾选`该公式应用于手机`
 * 每次修改模板后都要重新`发布手机端`
+
+
+## 如果遇到相机拍照后上传提示“压缩失败“的问题
+解决方案：请给app赋予`拍照`和`存储`权限！
+
+[细节见官方文档](http://bbs.nxcells.com/topic/detail/id/27.html)
