--- a/c7/07.1.md
+++ b/c7/07.1.md
@@ -1,4 +1,4 @@
-# 6.1 看板简易教程
+# 7.1 看板简易教程
 
 1、先来看看效果，表格内容自动刷新，我设置的是每20秒刷一次表格数据
 
@@ -18,7 +18,7 @@
 
 * 时间刷新JS如下，定时刷新插件装一下，插件已上传到群里了。
 
-```
+```javascript
 setInterval(refresh,200);
 function refresh(){
     Forguncy.Page.getCell("time").setValue(new Date());
@@ -38,4 +38,8 @@ function refresh(){
 
 ![](../img/7.1.7.jpg)
 
-将这个快件方式设置开机启动即可
+将这个快件方式设置开机启动即可。
+
+by @新新
+
+2018-7-5
