--- a/c7/07.2.md
+++ b/c7/07.2.md
@@ -1,6 +1,20 @@
-# 6.2 微信集成
+# 7.2 明细直接拆分
 
-* 回调url：http://域名/wx.ashx
-* 自定义菜单：服务器server目录下\webchat\menu的json文件
-* 需要认证的服务号，可语音打开某个模板
-* 匿名填报
+> @Mr.He
+
+![](../img/7.2.1.png)
+
+![](../img/7.2.2.png)
+
+> @benava：辅助表可以替换：
+
+```sql
+--1 到 100的临时表
+with t
+as
+(select 1 as dt
+ union all
+ select dt+1 from t
+ where dt+1<=100
+)
+```
